# learning

./: .gitignore
learning/: LEARNING_TEMPLATE.md  python_architecture_exercises.md  python_architecture_exercises.org
learning/ecommerce-excercises/: Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
learning/ecommerce-excercises/alembic/: env.py
learning/ecommerce-excercises/src/ecommerce/domain/: entities.py
learning/ecommerce-excercises/src/ecommerce/infrastructure/: entity_mappings.py
learning/ecommerce-excercises/tests/: conftest.py
learning/ecommerce-excercises/tests/infrastructure/: test_entities.py
paths/: Untitled.ipynb
paths/LAyGD/00_apoyo_matematicas/: apuntes_matematica_para_principiantes.md  apuntes_matematica_para_principiantes.org  prueba_para_eva.html
paths/LAyGD/01_algebra_1/: algebra_1_unidad_1.ipynb
paths/LAyGD/01_calculo_1/: unidad_2.ipynb
paths/advent_2024/01/: 01.py
paths/advent_2024/02/: 02.py
paths/advent_2024/03/: 03.py  03_b.py
paths/advent_2024/04/: 04.py  04_bis.py  test_bis.txt
paths/advent_2024/05/: 05.py
paths/algebra-a/: Foundational_Math_2_(Learn).ipynb  Freecodecamp_Foundational_Math_1_(Learn).ipynb  vectores.ipynb
paths/algebra-a/.virtual_documents/: vectores.ipynb
paths/arg_prog/: programación_python_tramo-II_comisión-21677.ipynb
paths/arg_prog/Clase001/: primero.py
paths/chatgpt_prompt_eng/: Untitled.ipynb
paths/cosmicpython/: README.org  chapter1.org
paths/fluentpython/: 01-the-python-data-model.ipynb  02_an-array-of-sequences.ipynb  vector2d.py
paths/nix/: shell.nix
(+60 files in other folders)
